<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/alert_dark_frame"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/your_car_diary"
        android:textColor="#FFCDD2"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ownerInfoBtn"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit_your_personal_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <Button
        android:id="@+id/carDetailsBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_your_car_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownerInfoBtn" />

    <Button
        android:id="@+id/refuelInfoBtn"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_next_refuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carDetailsBtn" />

    <Button
        android:id="@+id/resultBtn"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refuelInfoBtn" />

    <Button
        android:id="@+id/optionsBtn"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>