<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/alert_dark_frame"
    tools:context=".Owner">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:text="@string/personal_information"
        android:textColor="#FFCDD2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView">

        <EditText
            android:id="@+id/addName"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:textColor="#FFCDD2"
            android:textColorHighlight="#FFCDD2"
            android:textColorHint="#FFCDD2" />

        <EditText
            android:id="@+id/addMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#FFCDD2"
            android:textColorHighlight="#FFCDD2"
            android:textColorHint="#FFCDD2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/carDetailsBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/enter_your_car_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/backBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go_back" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>